WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
164650
We recursively grab a lock in the DFGBytecodeParser causing us to deadlock
https://bugs.webkit.org/show_bug.cgi?id=164650
Summary
We recursively grab a lock in the DFGBytecodeParser causing us to deadlock
Saam Barati
Reported
2016-11-11 14:09:02 PST
Lets not do that.
Attachments
patch
(5.11 KB, patch)
2016-11-11 14:14 PST
,
Saam Barati
ggaren
: review-
Details
Formatted Diff
Diff
patch
(6.23 KB, patch)
2016-11-11 14:35 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2016-11-11 14:13:27 PST
<
rdar://problem/28996663
>
Saam Barati
Comment 2
2016-11-11 14:14:11 PST
Created
attachment 294536
[details]
patch
Geoffrey Garen
Comment 3
2016-11-11 14:31:17 PST
Comment on
attachment 294536
[details]
patch Need to hold a lock when reading byValInfo, at least because of cachedId.
Saam Barati
Comment 4
2016-11-11 14:35:18 PST
Created
attachment 294538
[details]
patch
Geoffrey Garen
Comment 5
2016-11-11 14:36:42 PST
Comment on
attachment 294538
[details]
patch r=me
WebKit Commit Bot
Comment 6
2016-11-11 15:06:47 PST
Comment on
attachment 294538
[details]
patch Clearing flags on attachment: 294538 Committed
r208614
: <
http://trac.webkit.org/changeset/208614
>
WebKit Commit Bot
Comment 7
2016-11-11 15:06:52 PST
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 8
2016-11-11 15:36:46 PST
(In reply to
comment #6
)
> Comment on
attachment 294538
[details]
> patch > > Clearing flags on attachment: 294538 > > Committed
r208614
: <
http://trac.webkit.org/changeset/208614
>
This change appears to have broken the Windows build:
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/81889
Saam Barati
Comment 9
2016-11-11 15:50:47 PST
(In reply to
comment #8
)
> (In reply to
comment #6
) > > Comment on
attachment 294538
[details]
> > patch > > > > Clearing flags on attachment: 294538 > > > > Committed
r208614
: <
http://trac.webkit.org/changeset/208614
> > > This change appears to have broken the Windows build: > >
https://build.webkit.org/builders/Apple%20Win%20Release%20%28Build%29/builds/
> 81889
Hopefully this fixes window's build
https://trac.webkit.org/changeset/208619
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug